# yubal

./: .dockerignore  .editorconfig  .env.example  .gitignore  .woodpecker.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yaml  justfile  mise.toml  pyproject.toml  run.py  styles.css
.github/workflows/: ci.yaml
app/: __init__.py  cli.py  routes.py
app/api/: __init__.py
app/api/routes/: sync.py
app/cli/: __init__.py  info.py  serve.py  sync.py
app/core/: __init__.py
app/schemas/: __init__.py  sync.py
app/services/: __init__.py  downloader.py  pipeline.py  sync.py  tagger.py
app/templates/: base.html  index.html  result.html
beets/: config.yaml
config/: beets_config.yaml  settings.py  spotify_token.json
deploy/: compose.yaml
docs/: integrations.md
docs/ytmusicapi-json-dumps/: atv.json  atv_get_playlist.json  atv_get_song.json  comparison.md  omv.json  omv_get_song.json
dumps/: atv.json  notes.md  omv_get_playlist.json
tests/: test_services.py
tests/unit/: test_job_store.py  test_m3u_generator.py  test_metadata_enricher.py
web/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  hero.ts  index.css
web/src/api/: client.ts  jobs.ts  schema.d.ts  sse.ts
web/src/components/: ConsoleOutput.tsx  ConsolePanel.tsx  Footer.tsx  Header.tsx  JobCard.tsx  ProgressSection.tsx  SyncButton.tsx  UrlInput.tsx  url-input.tsx
web/src/components/common/: job-card.tsx  panel.tsx
web/src/components/icons/: index.tsx
web/src/components/layout/: footer.tsx  header.tsx
web/src/components/ui/: AnimatedThemeToggler.tsx  Panel.tsx
web/src/hooks/: ThemeContext.ts  ThemeProvider.tsx  useJobs.ts  useLocalStorage.ts  useSync.ts  useTheme.ts
ytadl/: config.py
ytadl/api/: __init__.py  app.py
ytadl/api/routes/: __init__.py  sync.py
ytadl/cli/: __init__.py  app.py  doctor.py  download.py  import_cmd.py  info.py  nuke.py  serve.py  sync.py  tag.py  utils.py  version.py
ytadl/core/: __init__.py  config.py
ytadl/schemas/: __init__.py  sync.py
ytadl/services/: downloader.py  sync.py  tagger.py
ytmeta/: cli.py  extractor.py  models.py  tracker.py
ytmeta/models/: domain.py
ytmeta/services/: downloader.py  extractor.py
yubal/: settings.py
yubal/api/: app.py  dependencies.py  exceptions.py
yubal/api/routes/: cookies.py  jobs.py
yubal/core/: models.py
yubal/schemas/: cookies.py  jobs.py
yubal/services/: downloader.py  job_executor.py  job_store.py  metadata_patcher.py  protocols.py  sync.py  tagger.py
yubal/services/sync/: __init__.py  album.py  playlist.py  temp_dir.py
