[project]
name = "ytad"
version = "0.1.0"
description = "YouTube Album Downloader with auto-tagging via beets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "yt-dlp>=2024.0.0",
    "beets>=2.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pyacoustid>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]
