[project]
name = "ytadl"
version = "0.1.0"
description = "YouTube Album Downloader with auto-tagging via beets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "yt-dlp>=2024.0.0",
    "beets[lastgenre,lyrics]>=2.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.scripts]
ytadl = "app.cli:main"  # app/cli/__init__.py

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # bandit security
    "RUF", # ruff-specific
]
ignore = [
    "B008",  # typer uses function calls in defaults by design
    "S603",  # subprocess calls are internal tools, not untrusted
    "S607",  # partial paths are fine for ffprobe/beets
]

[tool.ruff.lint.per-file-ignores]
"app/cli/*.py" = ["B008"]  # typer CLI pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
